force-app/main/default/objects/Practitioner__c/Practitioner__c.object-meta.xml
<CustomObject>
    <label>Practitioner</label>
    <nameField>
        <displayFormat>DOCT-{000}</displayFormat>
        <label>DOCT-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Practitioners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>