force-app/main/default/objects/Practitioner__c/fields/Speciality__c.field-meta.xml
<CustomField>
    <fullName>Speciality__c</fullName>
    <label>Speciality</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Obstetrics and Gynecology</fullName>
            </value>
            <value>
                <fullName>Emergency Medicine</fullName>
            </value>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>General Surgery</fullName>
            </value>
            <value>
                <fullName>Psychiatry</fullName>
            </value>
            <value>
                <fullName>Radiology</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>