force-app/main/default/objects/Practitioner__c/validationRules/DOBRule.validationRule-meta.xml
<ValidationRule>
    <fullName>DOBRule</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Birth__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Date of Birth cannot be Future Date</errorMessage>
</ValidationRule>