force-app/main/default/objects/Practitioner__c/validationRules/ExperienceRule.validationRule-meta.xml
<ValidationRule>
    <fullName>ExperienceRule</fullName>
    <active>true</active>
    <errorConditionFormula>TODAY()- Date_of_Birth__c &lt;  (Experience__c *365)</errorConditionFormula>
    <errorMessage>Experience cannot be more than the Age</errorMessage>
</ValidationRule>